--- a/generic_RM_3.html
+++ b/generic_RM_3.html
@@ -75,18 +75,18 @@
 									<p></p>
 									<br></br>
 									<h3>"Implementing Machine Learning Tools and Techniques in Sentiment Analysis" using Facebook data from Kaggle.</h3>
-									<h4>Research Design</h4>
+									<h4>1. Research Design</h4>
 									<p><strong>Exploratory Research:</strong> It involves exploring the potential of various machine learning tools and techniques in sentiment analysis without a predefined hypothesis. For instance, assessing the effectiveness of different NLP algorithms in understanding the nuances of sentiment in Facebook posts, exploratory research allows for the flexibility to explore and identify promising methods.</p>
 									<p><strong>Conclusive Research:</strong> It involves a focused evaluation of promising algorithms identified during exploratory analysis will be conducted. This involves rigorously assessing their effectiveness and efficiency in sentiment analysis, using performance metrics to quantify their capabilities and ensure the selection of the most suitable machine learning techniques.</p>
-									<h4>Research Methods to Employ</h4>
+									<h4>2. Research Methods to Employ</h4>
 									<p>A mixed methods approach could be highly beneficial:</p>
 									<ul>
 									    <li><strong>Quantitative Research:</strong> This will likely form the core of your project as you're dealing with data analysis using machine learning tools. Quantitative methods will enable me to statistically analyse the performance of different sentiment analysis models, comparing metrics such as accuracy, precision, recall, and F1 scores across various algorithms.</li>
 									    <li><strong>Qualitative Research:</strong> While the primary focus might be on quantitative analysis, qualitative insights can be invaluable, especially when interpreting the context of sentiments or evaluating why certain models perform better than others. Techniques such as case studies of specific sentiment analysis challenges or interviews with experts in machine learning and NLP can provide deeper insights into the qualitative aspects of tool and technique selection.</li>
 									</ul>
-									<h4>Data Collection Methods</h4>
+									<h4>3. Data Collection Methods</h4>
 									<p>Secondary Research: The primary dataset comes from Kaggle, which falls under secondary research since it involves using pre-existing data. Reviewing any available metadata, documentation, and prior analyses to understand the dataset's structure, content, and any limitations is important.</p>
-									<h4>Ethical Considerations</h4>
+									<h4>4. Ethical Considerations</h4>
 									<p>When using data from platforms like Facebook, even if it's through a secondary source like Kaggle, ethical considerations around privacy, consent, and data usage rights are paramount. Ensure compliance with all relevant ethical guidelines, including data anonymization and respecting user privacy.</p>
 																		
 									<br></br>
