--- a/generic_RM_4.html
+++ b/generic_RM_4.html
@@ -109,7 +109,7 @@
 											    <p>11. <strong>Visuals and Presentation Aids:</strong>Brief mention of the types of visuals and how they will be used (50 words)</p>
 											    <p>12. <strong>Conclusion:</strong>Concise summary of the proposal and its potential impact (50 words)</p>
 									
-										<p></p><a href="LITERATURE REVIEW OULINE.docx" download>Click to download notebook for Literature Review Outline </a><p>	
+										<p></p><a href="LITERATURE REVIEW OUTLINE.docx" download>Click to download notebook for Literature Review Outline </a><p>	
 								
 									<p></p>
 									<p></p>
