--- a/generic_RM_4.html
+++ b/generic_RM_4.html
@@ -80,34 +80,50 @@
 									<br></br>
 									<h3 style="color: #CFA7F6;">Formative activities: Literature Review Outline</h3>	
 
-											    <p>1. <strong>Project Title:</strong>Brief mention (10 words)</p>
-											    <p>2. <strong>Significance to Discipline:</strong>Expand on the contribution to sentiment analysis and machine learning (140 words)</p>
-											    <p>3. <strong>Alignment with MSc Major:</strong>Explanation of how the project meets MSc requirements (150 words)</p>
-											    <p>4. <strong>Research Problem and Question</strong></p>
+											    <p><strong>1. Introduction</strong></p>
 											    <ul>
-											        <li>Brief overview of the issue (80 words)</li>
-											        <li>Presentation and justification of the chosen question(s) (120 words)</li>
+											        <li>Definition and importance of sentiment analysis.</li>
+											        <li>Brief overview of machine learning (ML) and its application in sentiment analysis.</li>
+											        <li>Purpose and scope of the literature review.</li>
 											    </ul>
-											    <p>5. <strong>Aims and Objectives</strong></p>
+											    <p><strong>2. Historical Background</strong></p>
 											    <ul>
-											        <li>Clear statement of the aims (50 words)</li>
-											        <li>Expanded and SMART objectives, excluding literature review as an objective (150 words)</li>
+											        <li>Early methods of sentiment analysis before ML.</li>
+											        <li>Evolution of ML in sentiment analysis.</li>
+											        <li>Key milestones and breakthroughs.</li>
 											    </ul>
-											    <p>6. <strong>Literature Review:</strong>Overview of existing research, highlighting gaps your project addresses (400 words)</p>
-											    <p>7. <strong>Methodology and Research Design</strong></p>
+											    <p><strong>3. Core Machine Learning Concepts in Sentiment Analysis</strong></p>
 											    <ul>
-											        <li>Detailing of chosen methods and tools (150 words)</li>
-											        <li>Explanation of why these methods are suited to your aims (150 words)</li>
+											        <li>Overview of ML concepts relevant to sentiment analysis (e.g., supervised, and unsupervised learning, natural language processing).</li>
+											        <li>Discussion of common algorithms used (e.g., Naive Bayes, SVM, neural networks).</li>
+											        <li>Role of data preprocessing and feature extraction.</li>
 											    </ul>
-											    <p>8. <strong>Ethical Considerations and Risk Assessment</strong></p>
+											    <p><strong>4. Case Studies and Applications</strong></p>
 											    <ul>
-											        <li>Ethical issues and how they will be addressed (100 words)</li>
-											        <li>Identification and mitigation strategies (100 words)</li>
+											        <li>Analysis of notable case studies where ML has been successfully implemented in sentiment analysis.</li>
+											        <li>Various domains and industries where ML-driven sentiment analysis is used (e.g., finance, healthcare, social media).</li>
 											    </ul>
-											    <p>9. <strong>Artefact Description (If Applicable):</strong>Brief description of any artefacts that will be created (100 words)</p>
-											    <p>10. <strong>Timeline and Project Planning:</strong>Presentation of a realistic timeline using a Gantt Chart or similar tool (200 words)</p>
-											    <p>11. <strong>Visuals and Presentation Aids:</strong>Brief mention of the types of visuals and how they will be used (50 words)</p>
-											    <p>12. <strong>Conclusion:</strong>Concise summary of the proposal and its potential impact (50 words)</p>
+											    <p><strong>5. Comparative Analysis of Tools and Techniques</strong></p>
+											    <ul>
+											        <li>Comparison of different ML tools and techniques in terms of effectiveness, accuracy, and efficiency.</li>
+											        <li>Pros and cons of various approaches.</li>
+											    </ul>
+											    <p><strong>6. Challenges and Limitations</strong></p>
+											    <ul>
+											        <li>Discussion of challenges in implementing ML for sentiment analysis (e.g., handling sarcasm, context understanding).</li>
+											        <li>Limitations of current ML techniques.</li>
+											    </ul>
+											    <p><strong>7. Recent Advancements and Future Trends</strong></p>
+											    <ul>
+											        <li>Overview of the latest developments in ML for sentiment analysis.</li>
+											        <li>Predictions and trends for the future (e.g., the rise of deep learning, AI integration).</li>
+											    </ul>
+											    <p><strong>8. Conclusion</strong></p>
+											    <ul>
+											        <li>Summary of findings from the literature review.</li>
+											        <li>Reflection on the impact of ML on sentiment analysis and potential future directions.</li>
+											    </ul>
+
 									
 										<p></p><a href="LITERATURE REVIEW OUTLINE.docx" download>Click to download notebook for Literature Review Outline </a><p>	
 								
