--- a/generic_RM_8.html
+++ b/generic_RM_8.html
@@ -156,7 +156,7 @@
 
 												
 												<h3><strong>Exercise 8.6</strong></h3>
-												<p><strong>Consider the bank cardholder data of Data Set C. Open the Excel workbook Exe8.6C.xlsx which contains this data from the Exercises folder<strong>.</strong></p>
+												<p><strong>Consider the bank cardholder data of Data Set C. Open the Excel workbook Exe8.6C.xlsx which contains this data from the Exercises folder</strong></p>
 												<p><strong>Assuming the data to be suitably distributed, complete an appropriate test of whether the population mean income for males exceeds that of females and interpret your findings. What assumptions underpin the validity of your analysis, and how could you validate them?</strong></p>
 												
 												<p><strong>Answer:</strong></p>
