--- a/generic_RM_8.html
+++ b/generic_RM_8.html
@@ -161,7 +161,7 @@
 												
 												<p><strong>Answer:</strong></p>
 
-										        	<p></p><a href="Exe 8.6CG.xlsx" download>Click to download notebook for Workbook 8.6C </a><p>
+										        	<p></p><a href="Exe 8.6C.xlsx" download>Click to download notebook for Workbook 8.6C </a><p>
 									
 												<p>Since the population of mean and the population of females are separate samples of individuals, the independent samples t-test is used.</p>
 												<p>Assumptions for the t-test include:
