--- a/generic_RM_6.html
+++ b/generic_RM_6.html
@@ -85,7 +85,7 @@
 									    <h5>Research Question</h5>
 									    <p>How can optimizing machine learning improve sentiment analysis accuracy on Twitter data?</p>
 									    
-									    <h5><b>Data Collection Tool</h5>
+									    <h5>Data Collection Tool</h5>
 									    <p>Twitter API via Tweepy for extracting tweets based on keywords, hashtags, or user IDs.</p>
 									    
 									    <h5>Data Collection Method</h5>
