--- a/generic_RM_6.html
+++ b/generic_RM_6.html
@@ -122,7 +122,8 @@
 
 									<p><strong>The Mauritius Housing Company (MHC) Ltd survey</strong> is designed to gather customer feedback on various aspects of their service. It covers how customers learn about MHC, the specific products, or services they are interested in, their overall experience, staff interaction, waiting times, and the likelihood of recommending MHC. It also inquiries about the information provided on the MHC website and asks for suggestions on additional services or products.Below is the customer satisfaction survey of the MHC (http://www.mhc.mu/customer-care/customer-satisfaction-survey):-</p>
     
-									 <img src="images/RMPP_IMG4.png" alt= "Customer Satisfaction Survey" title="Customer Satisfaction Survey">  
+									<img src="images/RMPP_IMG4.png" alt="Customer Satisfaction Survey" title="Customer Satisfaction Survey" width="800" height="600">
+
 									
 									<p><strong>Critique:</strong></p>
 									    <ul>
